# fast-storages

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bump-version-and-tag.yml  pr-title-check.yml  python-publish.yml
examples/: app.py
fast_storages/: __init__.py  base.py  config.py  dependencies.py  exceptions.py  files.py  manager.py  registry.py
fast_storages/backends/: __init__.py  azure.py  local.py  postgresql.py  postgresql_schema.py  s3.py
tests/: test_local_backend.py  test_postgresql_backend.py
